--- a/app/src/CountdownTimer/CountdownTimer.css
+++ b/app/src/CountdownTimer/CountdownTimer.css
@@ -1,8 +1,11 @@
+
+
 .timer-container .timer-header {
-  font-size: 20px;
+  font-size: 26px;
   font-weight: bold;
 }
 
 .timer-container .timer-value {
-  font-size: 18px;
+  font-size: 32px;
+  font-family: Courier, "Courier New", monospace;
 }
