--- a/app/src/App.css
+++ b/app/src/App.css
@@ -149,10 +149,10 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 1em 0 1em;
-  /* position: absolute;
-  bottom: 20px;
-  left: 0; */
+  padding: 1em 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 
