--- a/app/src/App.css
+++ b/app/src/App.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 30px 60px 30px;
+  padding: 0 30px;
   color: white;
   position: relative;
   /* background-color: #35aee2; */
